# code-review-crew

./: .dockerignore  .env.example  .gitignore  Dockerfile  GET_STARTED.md  PORTFOLIO_SUMMARY.md  README.md  app.py  lambda_handler.py  pyproject.toml  requirements.txt
examples/: buggy_code.py  test.py
src/: app.py  crew.py  logger.py
src/assets/: style.css
src/config/: agents.yaml  settings.py  tasks.yaml
src/static/: app.js  index.html  style.css
